--- a/.github/workflows/copilot-help.yaml
+++ b/.github/workflows/copilot-help.yaml
@@ -1,8 +1,8 @@
 name: Copilot Help
 
-on:
-  issues:
-    types: [labeled]
+on: 
+  repository_dispatch:
+  workflow_dispatch:
 
 jobs:
   copilot-answer:
