--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Commit and push versioned Makefiles
         run: |
-          git config user.name "Jaykwok2999"
-          git config user.email "194788255+Jaykwok2999@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add openwrt-support/rtp2httpd/Makefile.versioned openwrt-support/luci-app-rtp2httpd/Makefile.versioned
           git commit -m "chore: update versioned Makefiles for ${{ github.event.release.tag_name }}"
           git push origin HEAD:main
